k8s-filebeat-elk/elasticsearch-state.yaml
---
# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-logging
  labels:
    k8s-app: elasticsearch-logging
    version: v7.6.2
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  serviceName: elasticsearch-logging
  replicas: 1
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      version: v7.6.2
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        version: v7.6.2
        kubernetes.io/cluster-service: "true"
    spec:
#      serviceAccountName: elasticsearch-logging
      containers:
      - image: docker.elastic.co/logstash/logstash:7.6.2
        name: logstash
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        volumeMounts:
        - name: logstash-config
          mountPath: /usr/share/logstash/config/logstash.yml
          readOnly: true
          subPath: logstash.yml
      - image: kibana:7.6.2
        name: kibana
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 3000m
          requests:
            cpu: 300m
        volumeMounts:
        - name: kibana-config
          mountPath: /usr/share/kibana/config/kibana.yml
          readOnly: true
          subPath: logstash.yml
      - image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
        name: elasticsearch-logging
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-logging
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: kibana-config
        configMap:
#          defaultMode: 0644
          name: kibana-config
      - name: logstash-config
        configMap:
#          defaultMode: 0644
          name: logstash-config
      - name: elasticsearch-logging
        emptyDir: {}
      # Elasticsearch requires vm.max_map_count to be at least 262144.
      # If your OS already sets up this number to a higher value, feel free
      # to remove this init container.
---
apiVersion: v1
kind: Service
metadata:  
  name: elasticsearch-logging  
#  namespace: kube-system  
  labels:    
    k8s-app: elasticsearch-logging    
    kubernetes.io/cluster-service: "true"    
    addonmanager.kubernetes.io/mode: Reconcile    
    kubernetes.io/name: "Elasticsearch"
spec:
  type: ClusterIP
  ports:
  - name: db
    port: 9200
    protocol: TCP
    targetPort: 9200
  - name: ui
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:    
    k8s-app: elasticsearch-logging
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elk-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - host: elk.king.com
    http:
      paths:
      - backend:
          serviceName: elasticsearch-logging
          servicePort: 5601
